bpo-34126: Fix crashes while profiling invalid calls. (GH-8300)